# purplexity

./: .gitignore  main.py  pyproject.toml  readme.md
core/: constants.py  db.py
models/: chat.py  sources.py  user.py
schemas/: chatinput.py  chatoutput.py  modelconfig.py
services/: conversation.py
